Fix z-index of card FABs

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -58,6 +58,10 @@ p {
     }
 }
 
+.MuiFab-default {
+    z-index: 2 !important;
+}
+
 .jo-hero {
     z-index: 0;
     padding-bottom: 64px;
